# workplace-openv

./: README.md
workplace/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate-submission.sh
workplace/server/: __init__.py  app.py  requirements.txt  workplace_environment.py
workplace/tests/: test_workplace_environment.py
